# DeployLangChain_aws

./: .dockerignore  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
src/: main.py  rag_service.py
